# MCPGuard

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  Dockerfile  README.md  mcpguard.servers.yaml  mcpguard.yaml  pyproject.toml
.github/actions/mcpguard/: action.yml
.github/workflows/: mcpguard.yml  release.yml  security.yml
benchmarks/: evaluate_report.py
deploy/: docker-compose.prod.yml
deploy/k8s/: mcpguard-cronjob.yaml
docs/: BENCHMARK_AND_EVALUATION.md  CHECK_RULES.md  CI_CD_INTEGRATION.md  CLI_CONFIG_REFERENCE.md  FUNCTIONS_GUIDE.md  NEXT_PROMPT.md  PRODUCTION_RUNBOOK.md  README.md  SECURITY_ARCHITECTURE.md
examples/basic_server/: README.md  server.py
examples/exploit_playground/: README.md  expected-detections.json  malicious_server.py  manifest.yaml  mcpguard.exploit.yaml
examples/vulnerable_server/: README.md  server.py
src/mcpguard/: cli.py  client.py  config.py  models.py  registry.py  risk.py  runner.py
src/mcpguard/checks/: fuzz_inputs.py  permission_boundary.py  prompt_injection.py  schema_quality.py  secret_scan.py  timeout_check.py
src/mcpguard/report/: json_report.py  sarif_report.py  terminal.py
tests/: conftest.py  test_benchmark_evaluator.py  test_cli_fail_gate.py  test_config_tools_policy.py  test_fuzz_inputs.py  test_json_report.py  test_permission_boundary.py  test_prompt_injection.py  test_registry.py  test_risk.py  test_sarif_report.py  test_schema_quality.py  test_secret_scan.py  test_terminal_report.py  test_timeout_check.py
