[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpguard"
version = "0.1.0"
description = "Security and reliability checks for MCP tools before agents call them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "jsonschema>=4",
    "pyyaml>=6",
]

[project.scripts]
mcpguard = "mcpguard.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit[toml]>=1.7.0",
    "types-PyYAML>=6.0.12",
    "build>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit[toml]>=1.7.0",
    "types-PyYAML>=6.0.12",
    "build>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "F401", "I001", "SIM103", "UP041", "UP042"]

[tool.mypy]
python_version = "3.12"
packages = ["mcpguard"]
pretty = true
show_error_codes = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disable_error_code = ["dict-item", "override"]

[tool.bandit]
targets = ["src/mcpguard"]
skips = ["B105", "B603", "B607"]
